--- a/styles.css
+++ b/styles.css
@@ -5,10 +5,48 @@
 }
 body{
     margin: 0px;
+    font-family: "Roboto", sans-serif;
 }
 header{
-    font-family: 'Shrikhand', cursif; 
+    font-family: "Shrikhand", Arial, Helvetica, sans-serif; 
     text-align: center;
-    box-shadow:0 3px 3px 1px lightgrey;
-    padding:4px;
+    box-shadow: 0 3px 3px 1px rgba(50, 48, 48, 0.069);
+    padding: 4px;
+    margin: 0;
+    position: relative;
+}
+main .ville{
+    display: flex;
+    gap: 16px;
+    background-color: rgba(211, 211, 211, 0.97);
+    text-align: center;
+    justify-content: center;
+    padding: 8px;
+    align-items: center;
+}
+main .city i{
+    font-size: 16px;
+}
+/* EXPLORER */
+
+.exploration{
+    text-align: center;
+}
+.exploration h2{
+    margin-top: 20px;
+    font-size: 16px;
+    font-weight: bold;
+    
+}
+.exploration p{
+    font-size: 10px;
+}
+.exploration button{
+    background-image: linear-gradient(#ff79da, #9356dc);
+    border-radius: 32px;
+    box-shadow: 1px 1px 16px 2px rgba (66,59,59,0.76);
+    width: 45%;
+    height:30px;
+    border: none;
+    color: white;   
 }
