--- a/styles.css
+++ b/styles.css
@@ -78,7 +78,6 @@ h1{
     box-shadow: 0.25rem 0.25rem 0.5rem rgb(0 0 0 / 13%);
     border-radius: 20px;
     background-color: #f6f6f6;
-    display: flex;
     position: relative;
     width: 25%;
     height: 60px;
@@ -114,23 +113,32 @@ h1{
     position: relative;
     flex-direction: row;
     justify-content: space-evenly;
+    
 }
-.selection-restaurant{
+
+#selection-restaurant .resto-img{
+    width: 100%;
+    height: 180px;
+    object-fit: cover;
+    border-radius: 15px 15px 0 0;
     display:flex;
+    flex-wrap:wrap;
+
 }
 .resto-img{
+    
     height: 200px;
     width: 100%;
     object-fit: cover;
     align-items: center;
 }
-.tag{
+.resto-img .tag{
     background-color: #99e2d0;
     color: #1b6150;
-    padding: .5rem;
+    padding: 8px;
     border-radius: .125rem;
     position: absolute;
-    top: 1rem;
+    top: 20px;
     right: .75rem; 
 }
 h2{
@@ -143,3 +151,13 @@ h2{
     justify-content: space-around;
 }
 
+/*MEDIA QUERIES*/
+
+@media (max-width:768px){
+    .liste-grille{
+        flex-direction:column;
+        
+        
+     }
+    
+}
