--- a/styles.css
+++ b/styles.css
@@ -17,6 +17,7 @@ header{
 }
 main{
     padding: 0;
+    margin: 0 64px;
 }
 main .ville{
     display: flex;
@@ -42,6 +43,7 @@ h1{
 .reservez-menu, h2{
     margin-top: 20px;
     font-weight: bold;
+    text-align:center;
     
 }
 .decouverte-resto, p{
@@ -67,7 +69,7 @@ h1{
     text-align: left;
     margin-top: 36px;
     font-size: xx-large;
-    margin-left: 13%;
+    
 }
 .tuto h3:hover{
     transform: scale(1.02);
@@ -79,8 +81,10 @@ h1{
     border-radius: 20px;
     background-color: #f6f6f6;
     position: relative;
-    width: 25%;
-    height: 60px;
+    width: 30%;
+    height: 70px;
+    gap: 64px;
+    justify-content: center;
 }
 .icone .fa-mobile-alt, .fa-list-ul{
     color:darkgrey;
@@ -115,49 +119,68 @@ h1{
     justify-content: space-evenly;
     
 }
-
-#selection-restaurant .resto-img{
-    width: 100%;
-    height: 180px;
-    object-fit: cover;
-    border-radius: 15px 15px 0 0;
-    display:flex;
-    flex-wrap:wrap;
-
-}
-.resto-img{
+.menus {
     
-    height: 200px;
-    width: 100%;
-    object-fit: cover;
-    align-items: center;
+    background-color:#f6f6f6;
 }
-.resto-img .tag{
-    background-color: #99e2d0;
-    color: #1b6150;
-    padding: 8px;
-    border-radius: .125rem;
-    position: absolute;
-    top: 20px;
-    right: .75rem; 
+.menus-cartes {
+    display:grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 48px;
+}
+.cartes{
+    
+    border-radius: 1rem;
+    position: relative;
+    text-decoration: none;
+    color: inherit;
+    display: block;
+    height: 260px;
+    flex-grow:1;
+    min-width: 350px;
+    
+}
+.cartes img{
+    height: 12rem;
+    width: 100%;
+    border: 0 solid transparent;
+    border-radius: 1rem 1rem 0 0;
+    box-shadow: none;
+    object-fit: cover;
+    
+}
+.cartes-description{
+        background-color: white;
+        margin-top:-35px;
+        border-radius: 0 0 20px 20px;
+        position:relative;
+}
+ .cartes-description h3, p{
+    margin-left:15px;
+}   
+
+.exploration .cartes{
+    text-align:left;
+    
 }
 h2{
-    margin-left: 50px;
+    text-align:left;
+    margin-bottom: 32px;
 }
-.conteneur-footer{
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: space-around;
+h3{
+    margin-top: 28px;
 }
-
-/*MEDIA QUERIES*/
-
-@media (max-width:768px){
-    .liste-grille{
-        flex-direction:column;
-        
-        
-     }
+.cartes-description, p{
+    margin-bottom:10px;
+    font-size: 18px;
+}
+i{
+    font-size: 32px;
+    position:absolute;
+    right:16px;
+    top: 50%;
+    transform:translateY(-50%);
     
-}
+    }
+
+
