--- a/styles.css
+++ b/styles.css
@@ -2,10 +2,8 @@
 @import url('https://fonts.googleapis.com/css2? family=Roboto:wght@300;400;500&family=Shrikhand&display=swap');
 *,::before,::after{
     box-sizing: border-box;
-}
-body{
-    margin: 0px;
-    font-family: "Roboto", sans-serif;
+    -webkit-box-sizing: border-box;
+    
 }
 header{
     font-family: "Shrikhand", Arial, Helvetica, sans-serif; 
@@ -17,7 +15,7 @@ header{
 }
 main{
     padding: 0;
-    margin: 0 64px;
+    margin: 0 ;
 }
 main .ville{
     display: flex;
@@ -117,7 +115,11 @@ h1{
     position: relative;
     flex-direction: row;
     justify-content: space-evenly;
-    
+    text-align: center;
+    background-color: #fafafa; 
+}
+.exploration{
+    background-color: #fafafa;
 }
 .menus {
     
@@ -180,7 +182,46 @@ i{
     right:16px;
     top: 50%;
     transform:translateY(-50%);
-    
+    }
+.info-carte{
+    background-color: #99e2d0;
+    color: #158c6e;
+    padding: 8px;
+    border-radius: 2px;
+    position: absolute;
+    top: 16px;
+    right: 12px;
+    font-weight: bold;
+    width:15%;
+    height:30px;
+    text-align: center; 
+    }
+    footer{
+        padding: 1rem;
+        background: #383838;
+        display: flex;
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+        flex-direction: column;
+    }
+    .logo{
+        
+        font-family: shrikhand, cursive;
+        font-size: 22px;
+        margin-top: -25px;
+        color:#fff;
+        margin-left: 3%;
     }
 
+     a, ul{
+        
+        text-decoration: none;
+        color: white;
+        list-style: none; 
+    }
+    a{
+        line-height: 1.5;
+    }
+    
 
