--- a/styles.css
+++ b/styles.css
@@ -200,18 +200,17 @@ i{
         padding: 1rem;
         background: #383838;
         display: flex;
-        -webkit-box-orient: vertical;
-        -webkit-box-direction: normal;
-        -ms-flex-direction: column;
         flex-direction: column;
+        text-align:left;
     }
     .logo{
         
         font-family: shrikhand, cursive;
         font-size: 22px;
-        margin-top: -25px;
+        margin-top: 30px;
         color:#fff;
         margin-left: 3%;
+        text-align: left;
     }
 
      a, ul{
@@ -222,6 +221,8 @@ i{
     }
     a{
         line-height: 1.5;
+        text-align:left;
+        margin:0;
     }
     
 
