--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,6 @@
 @import url('https://fonts.googleapis.com/css2? famille=Shrikhand&display=swap');
 @import url('https://fonts.googleapis.com/css2? family=Roboto:wght@300;400;500&family=Shrikhand&display=swap');
-*,::before,::after{
-    box-sizing: border-box;
-    -webkit-box-sizing: border-box;
-    
-}
+
 header{
     font-family: "Shrikhand", Arial, Helvetica, sans-serif; 
     text-align: center;
@@ -177,7 +173,7 @@ h3{
     margin-bottom:10px;
     font-size: 18px;
 }
-i{
+ i{
     font-size: 32px;
     position:absolute;
     right:16px;
@@ -197,7 +193,7 @@ i{
     height:30px;
     text-align: center; 
     }
-    footer{
+    .footer{
         padding: 16px 0 16px 0;
         margin: 2px 0;
         background: #383838;
@@ -214,7 +210,6 @@ i{
         margin-left: 3%;
         text-align: left;
     }
-
      a, ul{
         
         text-decoration: none;
@@ -226,5 +221,4 @@ i{
         text-align:left;
         margin:0;
     }
-    
 
