--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,22 @@
 @import url('https://fonts.googleapis.com/css2? famille=Shrikhand&display=swap');
 @import url('https://fonts.googleapis.com/css2? family=Roboto:wght@300;400;500&family=Shrikhand&display=swap');
-
+COULEURS DEFINIES
+:root{
+    --transparent: transparent;
+    --inherit: inherit;
+    --white:#fff;
+    --black: #000;
+    --primary: #9356DC;
+    --secondary: #FF79DA;
+    --tertiary: #99E2D0;
+    --night-rider: #353535;
+    --white-smoke: #f6f6f6;
+    --dim-gray: #686868;
+    --whisper: #EAEAEA;
+    --blue-chalk: #e4d5f6;
+    --silver: #c6bfbf;
+    --deep-sea: #009f88;
+}
 header{
     font-family: "Shrikhand", Arial, Helvetica, sans-serif; 
     text-align: center;
@@ -9,6 +25,10 @@ header{
     margin: 0;
     position: relative;
 }
+html{
+    margin:0;
+    padding: 0;
+}
 main{
     padding: 0;
     margin: 0 ;
@@ -16,7 +36,7 @@ main{
 main .ville{
     display: flex;
     gap: 16px;
-    background-color: #f3f3f3;
+    background-color: var(--white);
     text-align: center;
     justify-content: center;
     padding: 8px;
@@ -40,17 +60,20 @@ h1{
     text-align:center;
     
 }
-.decouverte-resto, p{
+.decouverte-resto,  p{
     font-size: 20px;
+    align-items: center;
+    margin-left: 33%;
+    text-align: center;
 }
 .explore-bouton{
-    background-image: linear-gradient(#ff79da, #9356dc);
+    background-image: linear-gradient(#FF79DA, #9356DC);
     border-radius: 32px;
-    width: 15%;
-    height: 40px;
+    width: 25%;
+    height: 50px;
     margin-top: 16px;
     border: none;
-    color: white;
+    color: var(--white);
     transition: transform 200ms;
     font-size: 16px;
     font-weight: bold;
@@ -69,40 +92,43 @@ h1{
     transform: scale(1.02);
 }
 .carte1, .carte2, .carte3{
-    padding: 20px;
-    margin: 16px 0 16px 10px;
-    box-shadow: 0.25rem 0.25rem 0.5rem rgb(0 0 0 / 13%);
     border-radius: 20px;
+    min-height: 73px;
+    margin-left: 25px;
+    margin-right: 18px;
     background-color: #f6f6f6;
-    position: relative;
-    width: 30%;
-    height: 70px;
-    gap: 64px;
-    justify-content: center;
+    display: flex;
+    flex: 1;
+    justify-content: flex-start;
+    align-items: center;
+    gap: 20px;
+    box-shadow: 6px 6px 4px #e7e7e7;
+    cursor: pointer;
 }
 .icone .fa-mobile-alt, .fa-list-ul{
-    color:darkgrey;
+    color:#aba3a3a3;
     margin-left:10%;
     margin-right:10%;
+    font-size:20px;
 }
-.icone-couleur .fas {
-    color:#9356dc;
+.fa-store {
+    color: darkorchid;
     margin-right: 10%;
-    margin-left:10%;
+    margin-left:20%;
+    font-size:20px;
 }
 .numero{
-    background: #9356dc;
+    position: relative;
+    top: 0;
+    left: -0.75rem;
+    background-color: /*pink;*/#9356dc;
     color: white;
-    width: 6%;
-    height: 25px;
-    border-radius: 100%;
-    position: absolute;
-    margin-left: -40px;
-    padding: 6px;
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
     display: flex;
-    align-items: center;
     justify-content: center;
-    font-size: 16px;
+    align-items: center;
 }
 .liste-grille{
     padding: 1.5rem;
@@ -111,15 +137,15 @@ h1{
     position: relative;
     flex-direction: row;
     justify-content: space-evenly;
-    text-align: center;
-    background-color: #fafafa; 
+    text-align: justify;
+    background-color:#fff; 
 }
 .exploration{
-    background-color: #fafafa;
+    background-color: var(--white-smoke);
 }
 .menus {
     
-    background-color:#f6f6f6;
+    background-color: var(--white-smoke);
 }
 .menus-cartes {
     display:grid;
@@ -132,9 +158,9 @@ h1{
     border-radius: 1rem;
     position: relative;
     text-decoration: none;
-    color: inherit;
+    color: var(--inherit);
     display: block;
-    height: 260px;
+    height: 280px;
     flex-grow:1;
     min-width: 350px;
     
@@ -142,14 +168,14 @@ h1{
 .cartes img{
     height: 12rem;
     width: 100%;
-    border: 0 solid transparent;
+    border: 0 solid var(--transparent);
     border-radius: 1rem 1rem 0 0;
     box-shadow: none;
     object-fit: cover;
     
 }
 .cartes-description{
-        background-color: white;
+        background-color: var(--white);
         margin-top:-35px;
         border-radius: 0 0 20px 20px;
         position:relative;
@@ -170,55 +196,70 @@ h3{
     margin-top: 28px;
 }
 .cartes-description, p{
-    margin-bottom:10px;
+    margin-bottom: 10px;
     font-size: 18px;
+    justify-content: space-between;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-content: center;
+    align-items: flex-end;
 }
  i{
     font-size: 32px;
-    position:absolute;
     right:16px;
     top: 50%;
     transform:translateY(-50%);
     }
 .info-carte{
-    background-color: #99e2d0;
-    color: #158c6e;
-    padding: 8px;
-    border-radius: 2px;
     position: absolute;
-    top: 16px;
-    right: 12px;
-    font-weight: bold;
-    width:15%;
-    height:30px;
-    text-align: center; 
+    top: 15px;
+    right: 15px;
+    background-color:#99E2D0;
+    padding: 8px;
+    border-radius: 3px;
+    color: #009f88;
     }
-    .footer{
-        padding: 16px 0 16px 0;
-        margin: 2px 0;
-        background: #383838;
-        display: flex;
-        flex-direction: column;
-        text-align: left;
+    
+    footer {
+        color: white;
+        background-color: #353535;
+        padding: 20px;
+        margin: 0px -20px;
     }
-    .logo{
-        
+    
+    .footer-logo{
         font-family: shrikhand, cursive;
         font-size: 22px;
         margin-top: 30px;
-        color:#fff;
-        margin-left: 3%;
+        color:var(--white);
+        margin-left: 1%;
         text-align: left;
     }
-     a, ul{
-        
-        text-decoration: none;
-        color: white;
-        list-style: none; 
+    footer li .icon {
+        width: 15px;
+        margin-right: 8px;
+        font-size: 14px;
+    }
+    ul {
+        margin: 0px;
+        padding: 0px;
+        list-style-type: none;
     }
     a{
         line-height: 1.5;
         text-align:left;
         margin:0;
+        text-decoration: none; 
+        color: #f6f6f6;  
     }
+    .cartes .far {
+        font-size: 30px;
+        margin-bottom:20px;
+    }
+    .cartes p{
+        margin-right:50%;
+    }
+    
+
 
