--- a/css/menu1.css
+++ b/css/menu1.css
@@ -1,4 +1,28 @@
+* {
+    box-sizing: border-box;
+}
+body {
+    
+        font-size: 16px;
+        margin: 0 auto;
+        background-color: #f6f6f6;
+    }
 
+    header{
+    display: flex;
+    justify-content: center;
+    box-shadow: 0px 5px 5px lightgrey;
+    margin-bottom: 5px;
+}
+a {
+    color: black;
+    text-decoration: none;
+}
+.cartes-img img{
+    height: 250px;
+    width: 100%;
+    object-fit: cover;
+}
 
 
 
