--- a/css/styles.css
+++ b/css/styles.css
@@ -17,7 +17,12 @@ COULEURS DEFINIES
     --silver: #c6bfbf;
     --deep-sea: #009f88;
 }
- 
+body{
+font-size: 16px;
+margin: 0 auto;
+background-color: #f6f6f6;
+font-family: 'Roboto', sans-serif;
+}
 header{
     font-family: "Shrikhand", Arial, Helvetica, sans-serif; 
     text-align: center;
@@ -53,7 +58,8 @@ main .ville i{
     
 }
 h1{
-    margin-left: 5%;
+    margin: auto;
+    height: 24px;
 }
 .reservez-menu, h2{
     margin-top: 20px;
@@ -92,19 +98,25 @@ h1{
 .tuto h3:hover{
     transform: scale(1.02);
 }
-.carte1, .carte2, .carte3{
-    border-radius: 20px;
-    min-height: 73px;
-    margin-left: 25px;
-    margin-right: 18px;
-    background-color: #f6f6f6;
+.icone-couleur i{
     display: flex;
-    flex: 1;
-    justify-content: flex-start;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-content: stretch;
+    flex-basis: 60%;
+    margin-right: 40px;
+}
+.carte1, .carte2, .carte3{
+ display: flex;
+    flex-direction: row;
+    justify-content: inherit;
     align-items: center;
-    gap: 20px;
-    box-shadow: 6px 6px 4px #e7e7e7;
-    cursor: pointer;
+    align-content: inherit;
+    margin: 2.5rem 0 0 0;
+    border-radius: 1.75rem;
+    padding: 2.25rem 1.5rem;
+    box-shadow: 0.25rem 0.25rem 0.5rem rgb(0 0 0 / 13%);
+    background-color: var(--white-smoke);
 }
 .icone .fa-mobile-alt, .fa-list-ul{
     color:#aba3a3a3;
@@ -177,16 +189,19 @@ h1{
 }
 .cartes-description{
         background-color: var(--white);
-        margin-top:-35px;
         border-radius: 0 0 20px 20px;
         position:relative;
 }
  .cartes-description h3, p{
-    margin-left:15px;
+    margin-left: 15px;
+    margin-top: 10px;
 }   
 
 .exploration .cartes{
-    text-align:left;
+    text-align: left;
+    background-color: white;
+    border-radius: 1.25rem;
+    box-shadow: 0 0 16px #0000002e;
     
 }
 h2{
@@ -205,6 +220,8 @@ h3{
     flex-wrap: wrap;
     align-content: center;
     align-items: flex-end;
+    background-color: white;
+    border-radius: 1.25rem;
 }
  i{
     font-size: 32px;
@@ -259,8 +276,11 @@ h3{
         margin-bottom:20px;
     }
     .cartes p{
-        margin-right:50%;
-    }
+        margin-left: -65%;
+        margin-bottom: -20px;
+        margin-right: 40%;
+}
+    
     
 
 
