--- a/css/menu1.css
+++ b/css/menu1.css
@@ -22,6 +22,12 @@ a {
     width: 100%;
     object-fit: cover;
 }
+.fa-arrow-left:before {
+    content: "\f060";
+    margin-right: 50%;
+    margin-left: -500px;
+    font-size: 30px;
+}
 
 
 
