--- a/css/styles.css
+++ b/css/styles.css
@@ -17,6 +17,9 @@ COULEURS DEFINIES
     --silver: #c6bfbf;
     --deep-sea: #009f88;
 }
+*, :after, :before {
+    box-sizing: border-box;
+}
 body{
 font-size: 16px;
 margin: 0 auto;
@@ -35,6 +38,42 @@ html{
     margin:0;
     padding: 0;
 }
+.loader {
+    -webkit-animation: disappear .2s 3s forwards;
+    animation: disappear .2s 3s forwards;
+    background-color: #fff;
+    display: grid;
+    height: 100vh;
+    inset: 0;
+    opacity: .9;
+    place-items: center;
+    position: fixed;
+    transform-origin: top;
+    z-index: 1;
+}
+.loader:after {
+    -webkit-animation: spin 1s ease-in-out;
+    animation: spin 1s ease-in-out;
+    -webkit-animation-iteration-count: 3;
+    animation-iteration-count: 3;
+    border-radius: 50%;
+    border-right: 5px solid transparent;
+    border-top: 5px solid #9356dc;
+    content: "";
+    height: 100px;
+    width: 100px;
+}
+@keyframes disappear {
+    to {
+      transform: scale(0);
+    }
+  }
+  
+  @keyframes spin {
+    to {
+      transform: rotate(360deg);
+    }
+  }
 main{
     padding: 0;
     margin: 0 ;
@@ -47,6 +86,7 @@ main .ville{
     justify-content: center;
     padding: 8px;
     align-items: center;
+    margin-top: 10px;
 }
 main .ville i{
     font-size: 16px;
@@ -54,12 +94,7 @@ main .ville i{
 /* EXPLORER */
 
 .exploration{
-    text-align: center;
-    
-}
-h1{
-    margin: auto;
-    height: 24px;
+    text-align: center; 
 }
 .reservez-menu, h2{
     margin-top: 20px;
@@ -106,18 +141,42 @@ h1{
     flex-basis: 60%;
     margin-right: 40px;
 }
-.carte1, .carte2, .carte3{
- display: flex;
-    flex-direction: row;
-    justify-content: inherit;
-    align-items: center;
-    align-content: inherit;
-    margin: 2.5rem 0 0 0;
-    border-radius: 1.75rem;
-    padding: 2.25rem 1.5rem;
-    box-shadow: 0.25rem 0.25rem 0.5rem rgb(0 0 0 / 13%);
-    background-color: var(--white-smoke);
+.tuto li {
+        align-items: center;
+        background-color: #f6f6f6;
+        border-radius: 1rem;
+        box-shadow: 2px 1px 8px -3px #7e7e7e;
+        display: flex;
+        flex-grow: 1;
+        list-style-type: none;
+        padding: 1.5rem 2rem;
+        position: relative;
 }
+.tuto li:before {
+    background-color: #9356dc;
+    border-radius: 50%;
+    color: #fff;
+    content: counter(steps);
+    counter-increment: steps;
+    display: grid;
+    height: 2rem;
+    left: -1rem;
+    place-items: center;
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    width: 2rem;
+}
+ol{
+    display: flex;
+    gap: 25px;
+    align-items: stretch;
+    flex-wrap: wrap;
+    align-content: flex-start;
+    flex-direction: row;
+    margin-right:3%;
+}
+
 .icone .fa-mobile-alt, .fa-list-ul{
     color:#aba3a3a3;
     margin-left:10%;
@@ -191,12 +250,7 @@ h1{
         background-color: var(--white);
         border-radius: 0 0 20px 20px;
         position:relative;
-}
- .cartes-description h3, p{
-    margin-left: 15px;
-    margin-top: 10px;
-}   
-
+}  
 .exploration .cartes{
     text-align: left;
     background-color: white;
@@ -207,6 +261,7 @@ h1{
 h2{
     text-align:left;
     margin-bottom: 32px;
+    margin-left:2%;
 }
 h3{
     margin-top: 28px;
@@ -221,7 +276,15 @@ h3{
     align-content: center;
     align-items: flex-end;
     background-color: white;
-    border-radius: 1.25rem;
+    /* border-radius: 1.25rem; */
+    height: 38%;
+    margin-top: -1%;
+}
+li .fas{
+    flex-basis: 20%;
+    margin-bottom: -35px;
+    margin-top: -15px;
+    font-size: 25px;
 }
  i{
     font-size: 32px;
@@ -243,21 +306,22 @@ h3{
         color: white;
         background-color: #353535;
         padding: 20px;
-        margin: 0px -20px;
     }
     
     .footer-logo{
-        font-family: shrikhand, cursive;
-        font-size: 22px;
-        margin-top: 30px;
-        color:var(--white);
-        margin-left: 1%;
-        text-align: left;
-    }
+        font-family: Shrikhand,"sans-serif";
+        font-weight: 500;
+        padding: 16px 0;
+        font-size: 25px;
+}
+    
     footer li .icon {
         width: 15px;
         margin-right: 8px;
         font-size: 14px;
+    }
+    footer span{
+        margin-left:5px;
     }
     ul {
         margin: 0px;
@@ -276,9 +340,10 @@ h3{
         margin-bottom:20px;
     }
     .cartes p{
-        margin-left: -65%;
+        margin-left: -69%;
         margin-bottom: -20px;
-        margin-right: 40%;
+        margin-right: 36%;
+        align-items: flex-start;
 }
     
     
